fix: bottom padding of header on mobile.

--- a/express/blocks/submit-email/submit-email.css
+++ b/express/blocks/submit-email/submit-email.css
@@ -21,7 +21,7 @@
   text-align: left;
   line-height: 36px;
   padding-top: 0px;
-  padding-bottom: 40px;
+  padding-bottom: 12px;
 }
 
 .submit-email span {
